@@ -13,6 +13,13 @@ endif::[]
 This document provides a high-level view of the changes introduced in Asciidoctor by release.
 For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.
 
+== Unreleased
+
+Improvments::
+
+ * Increment counter (but not the corresponding attribute) if attribute is locked (#4013)
+ * Use attribute as seed value for counter even if not already registered as a counter (#4014)
+
 // tag::compact[]
 == 2.0.13 (2021-04-10) - @mojavelinux
 
